--- a/mayan/apps/appearance/templates/appearance/menus/menu_topbar.html
+++ b/mayan/apps/appearance/templates/appearance/menus/menu_topbar.html
@@ -13,6 +13,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
+                <a class="navbar-brand" href="{% url home_view %}">hello</a>
                 <a class="navbar-brand" href="{% url home_view %}">{% smart_setting 'COMMON_PROJECT_TITLE' %}</a>
             </div>
 
