--- a/mayan/apps/appearance/templates/appearance/menus/menu_topbar.html
+++ b/mayan/apps/appearance/templates/appearance/menus/menu_topbar.html
@@ -14,7 +14,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="{% url home_view %}">kuypun</a>
-                <a class="navbar-brand" href="{% url home_view %}">{% smart_setting 'COMMON_PROJECT_TITLE' %}</a>
+                <a class="navbar-brand" href="{% url home_view %}">{% smart_setting 'COMMON_PROJECT_TITLE' %} Nithan Docker</a>
             </div>
 
             <div id="navbar" class="navbar-collapse collapse">
